myteo/test/parser/ast/block/unclosed_block.exp
ERROR: test/parser/ast/block/unclosed_block.myte:1:1 Unexpected <EOF>
 1 | {
   |  ^